[Update] clean code